# TextAnalyzer

./: .gitignore_venv  ADVANCED_ANALYSIS_GUIDE.md  CLAUDE.md  QUICKSTART.md  README.md  README_V2.md  SETUP_GUIDE.md  advanced_analysis_testoai.json  advanced_analysis_testopoe.json  advanced_analysis_testoprova.json  advanced_analyzer.py  advanced_text_analyzer.py.OLD  analizzatoretesti.py  analyzer_v2.py  app.py  cli.py  dataset_generator.py  demo_help.py  gui_launcher.py  launcher.py  modern_analyzer.py  modern_analyzer.py.OLD  modern_launcher.py  pyproject.toml  requirements-minimal.txt  requirements.txt  setup_venv.bat  setup_venv.sh  test_advanced_system.py  test_ai_results.json  test_all_metrics.json  test_ensemble_gui.py.OLD  test_human_results.json  test_output.txt  test_sentiment_readability.py  test_variance_example.txt  testfinale.py
analyzers/: __init__.py  base_analyzer.py  lexical_analyzer.py  ml_analyzer.py  semantic_analyzer.py  stylistic_analyzer.py  syntactic_analyzer.py
core/: analyzer.py  ensemble_analyzer.py  ensemble_engine.py  text_analyzer.py  text_processor.py
data/: calibration_report.json  roc_analysis.json  validation_dataset.json
data/test_data/: ai_sample_1.txt  ai_sample_2.txt  ai_sample_3.txt  human_sample_1.txt  human_sample_2.txt  human_sample_3.txt
features/: feature_extractor.py
gui/: __init__.py  interface.py  main_window.py
gui/dialogs/: __init__.py
testi/: testoai.txt  testopoe.txt  testoprova.txt
tests/: test_suite.py
utils/: calibrator.py  confidence_metrics.py  data_loader.py  evaluator.py  input_validator.py  roc_analyzer.py
